// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchFilterTags /> should render correctly with a custom class name 1`] = `
<div
  className="search-filters--tags some-custom-class-name"
>
  <Memo(ForwardRef(Button))
    color="teal"
    fill="outline"
    icon={<Memo />}
    iconPosition="after"
    id="Audi"
    key="Audi"
    label="Audi"
    onClick={[Function]}
    size="xsmall"
  />
  <Memo(ForwardRef(Button))
    color="teal"
    fill="outline"
    icon={<Memo />}
    iconPosition="after"
    id="Coupe"
    key="Coupe"
    label="Coupe"
    onClick={[Function]}
    size="xsmall"
  />
  <Memo(ForwardRef(Button))
    color="teal"
    fill="solid"
    id="clearAllButton"
    label="Clear All"
    onClick={[Function]}
    size="xsmall"
  />
</div>
`;

exports[`<SearchFilterTags /> should render correctly with children & default props 1`] = `
<div
  className="search-filters--tags"
>
  <Memo(ForwardRef(Button))
    color="teal"
    fill="outline"
    icon={<Memo />}
    iconPosition="after"
    id="Audi"
    key="Audi"
    label="Audi"
    onClick={[Function]}
    size="xsmall"
  />
  <Memo(ForwardRef(Button))
    color="teal"
    fill="outline"
    icon={<Memo />}
    iconPosition="after"
    id="Coupe"
    key="Coupe"
    label="Coupe"
    onClick={[Function]}
    size="xsmall"
  />
  <Memo(ForwardRef(Button))
    color="teal"
    fill="solid"
    id="clearAllButton"
    label="Clear All"
    onClick={[Function]}
    size="xsmall"
  />
</div>
`;
